fixed about page spacing

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -28,6 +28,14 @@ header{
     text-align: center;
 }
 
+#aboutHeader{
+    height: 100px;
+}
+
+#aboutTitle{
+    margin-bottom: 70px;
+}
+
 
 
 
